<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:textColor="@color/titleColor"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/btn_introduction" />

        <Button
            android:id="@+id/btn_scenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:textColor="@color/titleColor"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/btn_scenes" />

        <Button
            android:id="@+id/btn_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:textColor="@color/titleColor"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:text="@string/btn_cards" />

        <Button
            android:id="@+id/btn_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:textColor="@color/titleColor"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_author" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>