<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScenesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_menu"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14sp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/scene_menu" />

            <TextView
                android:id="@+id/tx_forest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_forest"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_forest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14sp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/scene_forest" />

            <TextView
                android:id="@+id/tx_crossroads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_crossroads"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_crossroads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14sp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/scene_crossroads" />

            <TextView
                android:id="@+id/tx_medusa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_medusa"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_medusa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14sp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/scene_medusa" />

            <TextView
                android:id="@+id/tx_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_tutorial"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/scene_tutorial" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>